# admin-bot

./: .deployignore  .env  .env.example  .gitignore  AGENTS.md  BACKUP_SYSTEM.md  CLAUDE.md  ERROR_HANDLING.md  FEATURES.md  PROMPT.md  README.md  pyproject.toml  test_bot.py
.claude/commands/: bugfix.md  db-migration.md  feature.md  handler.md  lint-and-typecheck.md  triage-issue.md
bot/: main.py
bot/core/: admin_sync.py  backup.py  command_handler.py  config.py  ephemeral.py  error_handler.py  errors.py  i18n.py  logging_config.py  logging_old.py  permissions.py  private_handler.py  user_tracker.py  utils.py
bot/features/: global_enforcement.py  privacy.py  run-after-deploy.md
bot/features/admin_panel/: __init__.py  handlers.py
bot/features/ai_response/: __init__.py  handlers.py
bot/features/antispam/: __init__.py  handlers.py  member_check.py
bot/features/automations/: __init__.py  handlers.py
bot/features/bot_admin/: __init__.py  handlers.py  navigation.py
bot/features/moderation/: __init__.py  handlers.py
bot/features/onboarding/: __init__.py  handlers.py
bot/features/rules/: __init__.py  handlers.py
bot/features/topics/: __init__.py  handlers.py
bot/features/verification/: __init__.py  handlers.py
bot/infra/: db.py  global_violators_repo.py  migrate.py  models.py  repos.py  settings_repo.py
bot/locales/: __init__.py  ar.json  en.json
data/: bot.db  bot.db-shm  bot.db-wal  bot2.db
docs/: PROMPTS.md
scripts/: deploy.sh  fix_global_group.py  seed.py
telegram_admin_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+2 files in other folders)
